--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
   position: absolute;
   width: 60px;
   height: 80px;
-  background: pink;
+  background: purple;
   border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
   animation: float 6s ease-in-out infinite;
   opacity: 0.8;
