--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 }
 
 body {
-  background: url('https://i.pinimg.com/originals/9a/67/32/9a6732504eb8e888bda9d651d81efc98.gif') no-repeat center center fixed;
+  background: background. jpg no-repeat center center fixed;
   background-size: cover;
   overflow: hidden;
 }
