--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 }
 
 body {
-  background: background. jpg no-repeat center center fixed;
+  background-image: url('background.jpg');
   background-size: cover;
-  overflow: hidden;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 .balloon {
