--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ img.note-img {
     <button onclick="checkPassword()">Masuk</button>
   </div>  <div id="calendarPopup" class="popup hidden">
     <img src="calendar-july.jpg" alt="Kalender Juli" class="note-img">
-    <p>Tanggal 25 udah aku lingkarin~</p>
+    <p>This your dayy!</p>
     <button onclick="nextPopup()">Next</button>
   </div>  <div id="popup1" class="popup hidden">
     <img src="popup1.jpg" alt="Popup 1" class="note-img">
@@ -106,7 +106,7 @@ img.note-img {
     </div>
     <button onclick="nextNotePage()">Next Page</button>
   </div>  <div id="finalPopup" class="popup hidden">
-    <h2>Nanti abis isya kamu coba keluar rumah yaaa<br>i have something for youuu! &lt;3</h2>
+    <h2>Selamatt bobooo😙<br>luv uuu<3! &lt;3</h2>
   </div>  <img class="balloon" src="balloon1.png" style="left: 20%; animation-delay: 0s;">
   <img class="balloon" src="balloon2.png" style="left: 40%; animation-delay: 3s;">
   <img class="balloon" src="balloon3.png" style="left: 60%; animation-delay: 5s;">  <script>
